// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lights reducer test suite back lights should change the back light to on 1`] = `
Object {
  "backLightsState": true,
  "cabinLightsState": false,
  "frontLightsState": false,
  "wagonsLightsState": false,
}
`;

exports[`lights reducer test suite back lights should set back light off 1`] = `
Object {
  "backLightsState": false,
  "cabinLightsState": true,
  "frontLightsState": true,
  "wagonsLightsState": true,
}
`;

exports[`lights reducer test suite back lights should set back light on 1`] = `
Object {
  "backLightsState": true,
  "cabinLightsState": false,
  "frontLightsState": false,
  "wagonsLightsState": false,
}
`;

exports[`lights reducer test suite cabin lights should change the cabin light to on 1`] = `
Object {
  "backLightsState": false,
  "cabinLightsState": true,
  "frontLightsState": false,
  "wagonsLightsState": false,
}
`;

exports[`lights reducer test suite cabin lights should set cabin light off 1`] = `
Object {
  "backLightsState": true,
  "cabinLightsState": false,
  "frontLightsState": true,
  "wagonsLightsState": true,
}
`;

exports[`lights reducer test suite cabin lights should set cabin light on 1`] = `
Object {
  "backLightsState": false,
  "cabinLightsState": true,
  "frontLightsState": false,
  "wagonsLightsState": false,
}
`;

exports[`lights reducer test suite front lights should change the front light to on 1`] = `
Object {
  "backLightsState": false,
  "cabinLightsState": false,
  "frontLightsState": true,
  "wagonsLightsState": false,
}
`;

exports[`lights reducer test suite front lights should set front light off 1`] = `
Object {
  "backLightsState": true,
  "cabinLightsState": true,
  "frontLightsState": false,
  "wagonsLightsState": true,
}
`;

exports[`lights reducer test suite front lights should set front light on 1`] = `
Object {
  "backLightsState": false,
  "cabinLightsState": false,
  "frontLightsState": true,
  "wagonsLightsState": false,
}
`;

exports[`lights reducer test suite initial states should return initial state 1`] = `
Object {
  "backLightsState": false,
  "cabinLightsState": false,
  "frontLightsState": false,
  "wagonsLightsState": false,
}
`;

exports[`lights reducer test suite wagons lights should change the wagons light to on 1`] = `
Object {
  "backLightsState": false,
  "cabinLightsState": false,
  "frontLightsState": false,
  "wagonsLightsState": true,
}
`;

exports[`lights reducer test suite wagons lights should set wagons light off 1`] = `
Object {
  "backLightsState": true,
  "cabinLightsState": true,
  "frontLightsState": true,
  "wagonsLightsState": false,
}
`;

exports[`lights reducer test suite wagons lights should set wagons light on 1`] = `
Object {
  "backLightsState": false,
  "cabinLightsState": false,
  "frontLightsState": false,
  "wagonsLightsState": true,
}
`;
